Fix horizontal mobile display overflow Fix logging in development Make map and log available on window for production debugging

--- a/css/introduction.css
+++ b/css/introduction.css
@@ -3,6 +3,7 @@
 	font-family: Helvetica, sans-serif;
 	z-index: 25;
 	background: white;
+	overflow: auto;
 }
 #introduction .description {
 	padding: 10px 9px 0 10px;
